<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:padding="20dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="Option1"
        android:padding="20dp"
        android:text="@string/Button1" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lunch"
        android:padding="20dp"
        android:onClick="Option2"
        android:text="@string/Button2"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Dinner"
        android:padding="20dp"
        android:onClick="Option3"
        android:text="@string/Button3"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Cafe"
        android:onClick="Option4"
        android:padding="20dp"
        android:text="@string/Button4"
        android:layout_gravity="center"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Bar"
        android:onClick="Option5"
        android:padding="20dp"
        android:text="@string/Button5"
        android:layout_gravity="center"/>



</LinearLayout>